# mpc_dojo

./: .gitignore  LICENSE  README.md
Ivan/: MPC_Catch.ipynb  README.md
Ivan/MPC_Catch/: MPC_Catch.ipynb
Ivan/MPC_Catch/Results/: Results.pptx  catch_time_data.csv
Ivan/MPC_RL_Cartpole/: Cartpole_Control.ipynb  Cartpole_Control_Utils.py
Ivan/MPC_RL_Cartpole/Results/: dqn_episode_lengths.csv  mpc_episode_lengths.csv  ppo_episode_lengths.csv
Ivan/MPC_RL_Cartpole/Results/PerformanceResults/: dqn_episode_lengths_rl_training_steps_10000.csv  dqn_episode_lengths_rl_training_steps_100000.csv  dqn_episode_lengths_rl_training_steps_100000_noise__[_0_._1_ _ _0_._1_ _ _0_._0_1_ _0_._0_1_]_.csv  dqn_episode_lengths_rl_training_steps_100000_noise__[_0_._5_ _ _0_._5_ _ _0_._0_5_ _0_._0_5_]_.csv  mean_episode_lengths.csv  mpc_episode_lengths_h_10_e_1.csv  mpc_episode_lengths_h_10_e_1_noise__[_0_._1_ _ _0_._1_ _ _0_._0_1_ _0_._0_1_]_.csv  mpc_episode_lengths_h_10_e_1_noise__[_0_._5_ _ _0_._5_ _ _0_._0_5_ _0_._0_5_]_.csv  (+9 more)
Ivan/Results/: Results.pptx
shitty_bird/: .gitignore  README.md  pyproject.toml
shitty_bird/examples/: rayleigh_benard_simulation.py
shitty_bird/scripts/: quick_start.ipynb
shitty_bird/src/shitty_bird/: __init__.py
shitty_bird/src/shitty_bird/core/: __init__.py
shitty_bird/src/shitty_bird/core/lbm/: boundary.py  collisions.py  lattice.py  simulation.py  stream.py
shitty_bird/src/shitty_bird/simulations/: rayleigh_benard.py
shitty_bird/src/shitty_bird/utils/: __init__.py
shitty_bird/tests/: test_rayleigh_benard.py
(+1 files in other folders)
